--- a/SRE-VS/SRE-VS.vcxproj.filters
+++ b/SRE-VS/SRE-VS.vcxproj.filters
@@ -113,8 +113,6 @@
     <None Include="Source\handshake.c.makeignore">
       <Filter>Source</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="readme.txt" />
+    <None Include="..\readme.md" />
   </ItemGroup>
 </Project>
